Fix overflow when user name is very long

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -25,5 +25,6 @@
   &__content {
     flex-grow: 1;
     margin: 20px auto;
+    max-width: 100%;
   }
 }
