--- a/src/components/SubmissionHeader/SubmissionHeader.scss
+++ b/src/components/SubmissionHeader/SubmissionHeader.scss
@@ -1,4 +1,5 @@
 @use "@sass/variables" as *;
+@use "@sass/mixins" as *;
 
 .submission-header {
   display: flex;
@@ -11,6 +12,12 @@
 
   & a:hover {
     color: $color-inline-action-hover;
+  }
+
+  &__secondary-author {
+    @include text-truncate;
+
+    line-height: 1.3;
   }
 
   &__status-icons {
